--- a/12/index.html
+++ b/12/index.html
@@ -941,16 +941,16 @@ The Ithkuil system of numbers and counting is distinct from   Western languages 
 </p>
 <TABLE width="75%" border="1" align="center" cellPadding="1">
   <TR>
-    <TD height="53" class="style26"><div align="center"><img src="images/12-symbol-01.jpg" width="29" height="44" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-02.jpg" width="31" height="45" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-03.jpg" width="24" height="44" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-04.jpg" width="24" height="44" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-05.jpg" width="23" height="44" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-06.jpg" width="24" height="46" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-07.jpg" width="24" height="50" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-08.jpg" alt="" width="29" height="44" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-09.jpg" width="25" height="48" /></div></TD>
-    <TD class="style26"><div align="center"><img src="images/12-symbol-10.jpg" width="24" height="47" /></div></TD>
+    <TD height="53" class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-01.jpg" width="29" height="44" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-02.jpg" width="31" height="45" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-03.jpg" width="24" height="44" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-04.jpg" width="24" height="44" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-05.jpg" width="23" height="44" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-06.jpg" width="24" height="46" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-07.jpg" width="24" height="50" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-08.jpg" alt="" width="29" height="44" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-09.jpg" width="25" height="48" /></div></TD>
+    <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-10.jpg" width="24" height="47" /></div></TD>
   </TR>
   <TBODY>
     <TR>
@@ -988,15 +988,15 @@ The Ithkuil system of numbers and counting is distinct from   Western languages 
 <TABLE width="75%" border="1" align="center" cellPadding="1">
   <TBODY>
     <TR>
-      <TD height="84" class="style26"><div align="center"><img src="images/12-extension+10.jpg" width="34" height="62" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-extension+20.jpg" width="34" height="58" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-extension+30.jpg" width="42" height="63" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-extension+40.jpg" alt="" width="34" height="71" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-extension+50.jpg" width="35" height="64" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-extension+60.jpg" width="34" height="61" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-extension+70.jpg" alt="" width="34" height="61" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-extension+80.jpg" alt="" width="32" height="55" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-extension+90.jpg" width="34" height="47" /></div></TD>
+      <TD height="84" class="style26"><div align="center"><img src="/ithdocs/images/12-extension+10.jpg" width="34" height="62" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-extension+20.jpg" width="34" height="58" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-extension+30.jpg" width="42" height="63" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-extension+40.jpg" alt="" width="34" height="71" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-extension+50.jpg" width="35" height="64" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-extension+60.jpg" width="34" height="61" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-extension+70.jpg" alt="" width="34" height="61" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-extension+80.jpg" alt="" width="32" height="55" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-extension+90.jpg" width="34" height="47" /></div></TD>
     </TR>
     <TR>
       <TD class="style26"><DIV align="center">+10</DIV></TD>
@@ -1016,10 +1016,10 @@ The Ithkuil system of numbers and counting is distinct from   Western languages 
 <TABLE width="75%" border="1" align="center" cellPadding="1">
   <TBODY>
     <TR>
-      <TD class="style26"><div align="center"><img src="images/12-symbol-100.jpg" width="21" height="41" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-symbol-10-thousand.jpg" width="26" height="43" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-symbol-100-million.jpg" width="39" height="40" /></div></TD>
-      <TD class="style26"><div align="center"><img src="images/12-symbol-10-quadrillion.jpg" width="23" height="39" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-100.jpg" width="21" height="41" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-10-thousand.jpg" width="26" height="43" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-100-million.jpg" width="39" height="40" /></div></TD>
+      <TD class="style26"><div align="center"><img src="/ithdocs/images/12-symbol-10-quadrillion.jpg" width="23" height="39" /></div></TD>
     </TR>
     <TR>
       <TD width="19%" class="style26"><DIV align="center"><strong>&#328;al</strong></DIV></TD>
@@ -1049,25 +1049,25 @@ The Ithkuil system of numbers and counting is distinct from   Western languages 
 <p align="justify" class="style26">It should be noted that when pronouncing numbers greater than   199, it is normal in Ithkuil to omit the word <STRONG><strong><strong><span class="style6">&#328;</span></strong>ial</strong></STRONG> (=   the PARTITIVE of <STRONG><strong><span class="style6">&#328;</span></strong>al</STRONG> &lsquo;one hundred&rsquo;) referring   to the number of hundreds. This is equivalent to the custom in colloquial   English of saying &lsquo;three twelve&rsquo; for &lsquo;three hundred (and) twelve.&rsquo; The   difference is that in Ithkuil, this omission of the word for &lsquo;hundred&rsquo; is the   preferred option, the word <strong><strong><strong><span class="style6">&#328;</span></strong>ial</strong></strong> being used only in larger numbers   for clarity&rsquo;s sake.</p>
 <p align="justify" class="style26">These principles are illustrated by the following examples:</p>
 <blockquote>
-  <p class="style26"><strong><img src="images/12-example01.jpg" width="52" height="52" /><br>
+  <p class="style26"><strong><img src="/ithdocs/images/12-example01.jpg" width="52" height="52" /><br>
     ksal&icirc;k &nbsp;(&#328;ial) &nbsp;xmal&ouml;k</strong><br>
     literally: &ldquo;42   (of hundreds) 29&rdquo;<BR>
   <EM><STRONG>4229</STRONG></EM> </p>
   <p class="style26"><BR>
   </p>
-  <p class="style26"><strong><img src="images/12-example02.jpg" width="68" height="49" /><br>
+  <p class="style26"><strong><img src="/ithdocs/images/12-example02.jpg" width="68" height="49" /><br>
     cqal&ouml;k &nbsp;zmial &nbsp;nseuluk &nbsp;(&#328;ial) &nbsp;cqal&ucirc;k</strong><BR>
     literally: &ldquo;26 of   ten-thousands with 97 (of hundreds) 66&rdquo; = 26,9766<BR>
   <EM><STRONG>269,766</STRONG></EM></p>
   <p class="style26"><EM><STRONG><BR>
   </STRONG></EM></p>
-  <p class="style26"><strong><img src="images/12-example03.jpg" width="75" height="46" /><br>
+  <p class="style26"><strong><img src="/ithdocs/images/12-example03.jpg" width="75" height="46" /><br>
     llal&ouml;k&nbsp; &#328;ial&nbsp; zmual</strong><BR>
     literally: &ldquo;21 of   hundred of ten-thousands&rdquo;<BR>
     <STRONG><EM>21,000,000</EM></STRONG> <BR>
     [NOTE: <strong><strong><strong><span class="style6">&#328;</span></strong>ial</strong></strong> is required in this example]</p>
   <p class="style26"><BR>
-    <strong><img src="images/12-example04.jpg" width="162" height="53" /><br>
+    <strong><img src="/ithdocs/images/12-example04.jpg" width="162" height="53" /><br>
     ksalok&nbsp; &#328;ial&nbsp; xmaloki&#328;&nbsp;  apstwial&nbsp; &#355;keul&nbsp; &#328;ial&nbsp; &#355;kalaki&#328;&nbsp; zmual&nbsp;  pxeulek&nbsp; m&#345;al&ucirc;k</strong><BR>
     literally: <BR>
   &ldquo;72 of hundreds and 79 of hundred-millions with 3 of hundreds and 53 of   ten-thousands with 34  60&rdquo; <BR>
@@ -1076,12 +1076,12 @@ The Ithkuil system of numbers and counting is distinct from   Western languages 
 <p align="justify" class="style26"><BR>
   We have already seen that when numbers are used to indicate   how many of a certain noun there are, the noun must appear in the PARTITIVE case, since the number itself is functioning as the   &ldquo;head&rdquo; of the numerical expression (e.g., English &ldquo;12 boxes&rdquo; being constructed   in Ithkuil as a &ldquo;12-set of a box&rdquo; or perhaps more appropriately a &ldquo;box-dozen&rdquo;).   Another syntactical consequences of numbers being full formatives is when a   number functions as a label or overt identifier, as in the English sentence <EM>You&rsquo;ll find him in Room 216.</EM> Such usage of numbers is not primarily   sequential (which would involve the equivalent of &ldquo;ordinal&rdquo; numbers such as   &lsquo;fourth,&rsquo; &lsquo;twenty-sixth&rsquo;, etc. equivalent to stem No. 3 of each number root) but   rather organizational (e.g., as in the three-dimensional array of room numbers   in a hotel). Ithkuil handles such organizational labeling using either the COMPARATIVE case (see <A href="04_case.html#Sec4o5o32">Sec.   4.5.32</A>) or the ESSIVE case (see <A href="04_case.html#Sec4o5o9">Sec. 4.5.9</A>) depending respectively on   whether the enumeration of the noun in question is to distinguish it from other   enumerated nouns versus merely identifying the noun by a numerical name.   Examples:</p>
 <p class="style26"><br>
-    <img src="images/12-5a.jpg" width="104" height="36" /><BR>
+    <img src="/ithdocs/images/12-5a.jpg" width="104" height="36" /><BR>
   <strong>a&ccedil;t&aacute;l &nbsp;ksou&#8217;lik</strong><br>
   <span class="style29">&#8216;room&#8217;-OBL &nbsp;  &nbsp;&#8216;twelve&#8217;-CMP</span><BR>
 <EM>&lsquo;the   room marked &ldquo;12&rdquo;&rsquo; </EM><STRONG>OR</STRONG><EM> &lsquo;Room 12&rsquo; </EM><STRONG>OR</STRONG><EM> &lsquo;Room No. 12&rsquo;</EM> [i.e., as opposed to being some other  room]</p>
 <p class="style26">&nbsp;</p>
-<p class="style26"><img src="images/12-5b.jpg" width="112" height="37" /><BR>
+<p class="style26"><img src="/ithdocs/images/12-5b.jpg" width="112" height="37" /><BR>
   <strong>a&ccedil;t&aacute;l &nbsp;ksealik</strong><br>
   <span class="style29">&#8216;room&#8217;-OBL &nbsp;  &nbsp;&#8216;twelve&#8217;-ESS</span><BR>
   <EM>&lsquo;the   room marked &ldquo;12&rdquo;&rsquo; </EM><STRONG>OR</STRONG><EM> &lsquo;Room 12&rsquo; </EM><STRONG>OR</STRONG><EM> &lsquo;Room No. 12&rsquo;</EM> [identifying   reference only]</p>
