--- a/2/index.html
+++ b/2/index.html
@@ -909,8 +909,8 @@ A brief, preliminary explanation of these terms is given in Table 3 below. Detai
 <p align="center" class="style36">Vr + Cr + Vc  + Ca + tone+stress</p>
 <p class="style13">as illustrated by the examples <strong>p<sup>h</sup>al</strong>, &nbsp;<strong>eqoec</strong>, &nbsp;and &nbsp;&oline;<strong>&uuml;aklar&scaron;l&aacute;</strong> below: </p>
 <p class="style13">&nbsp;</p>
-<p class="style13"><img src="images/2-1-1a.jpg" width="43" height="29" /><br />
-  <strong>p<sup>h</sup>al</strong> <em>&lsquo;tree&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1a.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+<p class="style13"><img src="/ithdocs/images/2-1-1a.jpg" width="43" height="29" /><br />
+  <strong>p<sup>h</sup>al</strong> <em>&lsquo;tree&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1a.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
 <blockquote>
   <p class="style13"> Vr = (<strong>a-</strong>),*&nbsp; indicating Pattern 1,  Stem 1 of the root plus <span class="style33">STATIVE</span>  function<br />
     Cr = -<strong>p<sup>h</sup>-</strong>, indicating the root: &lsquo;branched/leaved plant&rsquo;<br />
@@ -922,8 +922,8 @@ A brief, preliminary explanation of these terms is given in Table 3 below. Detai
   <p class="style13">**As explained in <a href="01_phonology.html#Sec1o3o3">Section 1.3.3</a>,  monosyllabic words are considered to have penultimate stress for  morpho-phonological purposes.</p>
 </blockquote>
 <p class="style13"><strong>&nbsp;</strong></p>
-<p class="style13"><img src="images/2-1-1b.jpg" width="41" height="29" /><br />
-<strong>eqoec</strong> <em>&lsquo;regarding humankind&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1b.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1b.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+<p class="style13"><img src="/ithdocs/images/2-1-1b.jpg" width="41" height="29" /><br />
+<strong>eqoec</strong> <em>&lsquo;regarding humankind&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1b.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1b.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
 <blockquote>
   <p class="style13">Vr = <strong>e-</strong>,&nbsp;  indicating Pattern 1, Stem 2 of the root plus <span class="style33">STATIVE</span> function<br />
     Cr = -<strong>q-</strong>, indicating the root: &lsquo;higher order life-form&rsquo;<br />
@@ -933,8 +933,8 @@ A brief, preliminary explanation of these terms is given in Table 3 below. Detai
     stress  = penultimate, indicating <span class="style33">INFORMAL</span>  designation and <span class="style33">UNFRAMED</span> relation</p>
 </blockquote>
 <p class="style13">&nbsp;</p>
-<p class="style13"><img src="images/2-1-1c.jpg" width="54" height="42" /><br />
-  &oline;<strong>&uuml;aklar&scaron;l&aacute;</strong> <em>&lsquo;it is/being a representation of the man-made  courses/channels of a river that has dried up&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1c.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1c.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+<p class="style13"><img src="/ithdocs/images/2-1-1c.jpg" width="54" height="42" /><br />
+  &oline;<strong>&uuml;aklar&scaron;l&aacute;</strong> <em>&lsquo;it is/being a representation of the man-made  courses/channels of a river that has dried up&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1c.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1c.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
 <blockquote>
   <p class="style13">Vr = <strong>&uuml;a-</strong>,&nbsp;  indicating Pattern 3, Stem 1 of the root plus <span class="style33">MANIFESTIVE</span> function<br />
     Cr = -<strong>kl-</strong>, indicating the root:&nbsp; &lsquo;water  in natural motion&rsquo;<br />
@@ -949,8 +949,8 @@ A brief, preliminary explanation of these terms is given in Table 3 below. Detai
   <p class="style13"><strong>Vr + Cr + Vc  + Ci +Vi + Ca  + Vx+Cs + Vf + &rsquo;Cb </strong>+ <strong>tone</strong> +<strong> stress</strong>, as in:</p>
 </blockquote>
 <p class="style13"><br />
-  <img src="images/2-1-1d.jpg" width="74" height="39" /><br />
-<strong>Uip<sup>h</sup>aw&acirc;t&#316;&ucirc;xe&rsquo;&#328;?</strong>&nbsp; <em>&lsquo;Might  it happen to be a large symbolic grove of trees?&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1d.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1d.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+  <img src="/ithdocs/images/2-1-1d.jpg" width="74" height="39" /><br />
+<strong>Uip<sup>h</sup>aw&acirc;t&#316;&ucirc;xe&rsquo;&#328;?</strong>&nbsp; <em>&lsquo;Might  it happen to be a large symbolic grove of trees?&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1d.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1d.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
 <blockquote>
   <p class="style13">Vr = (<strong>ui-</strong>),&nbsp; indicating Pattern 1, Stem 1 of the root plus  <span class="style33">MANIFESTIVE</span> function<br />
     Cr = -<strong>p<sup>h</sup>-</strong>, indicating the root: &lsquo;branched/leaved plant&rsquo;<br />
@@ -966,8 +966,8 @@ A brief, preliminary explanation of these terms is given in Table 3 below. Detai
 </blockquote>
 <p class="style13">or&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>Cg  + Vr + Cx + Vp + Cr  + Vc + Ca + Vx+Cs  + Vf </strong>+ <strong>tone </strong>+ <strong>stress</strong>,  as in:</p>
 <p class="style13"><strong>&nbsp;</strong><br />
-  <img src="images/2-1-1e.jpg" width="117" height="45" /><br />
-<strong>hremsoqai&#355;surkoi</strong> <em>&lsquo;purportedly by means of the value derived  from all the varied attributes of humanity&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1e.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1e.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+  <img src="/ithdocs/images/2-1-1e.jpg" width="117" height="45" /><br />
+<strong>hremsoqai&#355;surkoi</strong> <em>&lsquo;purportedly by means of the value derived  from all the varied attributes of humanity&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1e.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1e.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
 <blockquote>
   <p class="style13">Cg = <strong>hr</strong>-, indicating <span class="style33">PURPORTIVE</span>  validation<br />
     Vr = <strong>e</strong>-,&nbsp; indicating Pattern 1, Stem 2 of the root plus  <span class="style33">STATIVE</span> function <br />
@@ -985,9 +985,9 @@ A brief, preliminary explanation of these terms is given in Table 3 below. Detai
 or a deliberately extreme example,</p>
 <p class="style13"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>Cv + V<span class="style33">L</span> + Cs + Vr +  Cx + Vp + Cr + Vc +  Ca + Vx + Cs + Vf  + &rsquo;Cb</strong> + tone + stress, as in:</p>
 <p class="style13"><br />
-  <img src="images/2-1-1f.jpg" width="124" height="40" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Clown6.jpg" width="70" height="88" align="absmiddle" />&nbsp;&nbsp;<br />
+  <img src="/ithdocs/images/2-1-1f.jpg" width="124" height="40" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="/ithdocs/images/Clown6.jpg" width="70" height="88" align="absmiddle" />&nbsp;&nbsp;<br />
     <strong><em>/</em>q<sup>h</sup>&ucirc;l-lyai&rsquo;svuk&scaron;ei&rsquo;arp&icirc;pt&oacute;&rsquo;ks </strong><br />
-<em>&lsquo;...being hard to  believe, after allegedly trying to go back to repeatedly inspiring fear using  rag-tag groups of suspicious-looking clowns, despite resistance&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1f.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1f.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+<em>&lsquo;...being hard to  believe, after allegedly trying to go back to repeatedly inspiring fear using  rag-tag groups of suspicious-looking clowns, despite resistance&rsquo;</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style33"><a href="sound_files/2-1-1f.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/2-1-1f.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
 <blockquote>
   <p class="style13">Cv = &nbsp;<strong>q<sup>h</sup></strong>, indicating <span class="style33">ALLEGATIVE</span> sanction plus <span class="style33">REPETITIVE</span> phase<br />
     V<span class="style33">L</span> &nbsp;= &nbsp;<strong>&ucirc;</strong>,  indicating <span class="style33">RESISTIVE</span> valence<br />
@@ -1605,7 +1605,7 @@ is arbitrary. </p>
   be diagrammed as follows:</p>
 <blockquote class="style13">
   <p align="center"> <br />
-      <img src="images/2-4-1.jpg" width="792" height="272" /> </p>
+      <img src="/ithdocs/images/2-4-1.jpg" width="792" height="272" /> </p>
 </blockquote>
 <p class="style13"><a name="Sec2o4o2" id="Sec2o4o2"></a></p>
 <h3 class="style13">2.4.2 Adjuncts </h3>
