--- a/6/index.html
+++ b/6/index.html
@@ -1580,22 +1580,22 @@ or <em>I&#8217;d like you to visit your father.</em></p>
 <p align="justify">&nbsp;</p>
 <h3 align="justify" class="style11"><strong>6.1.</strong>31 Examples of Modality in Use</h3>
 <blockquote>
-  <p class="style11"><strong><img src="images/5-7-15d.jpg" width="117" height="44" /><br />
+  <p class="style11"><strong><img src="/ithdocs/images/5-7-15d.jpg" width="117" height="44" /><br />
       <strong>W&euml;t&ouml;in-n &nbsp;</strong>ailtac&nbsp;  qeiwi.</strong><br />
       <span class="style25">RCP-PPS/CTX/ASR-<span class="style6"><strong>DVR</strong></span>-FAC  &nbsp;&nbsp;&nbsp; DYN-&lsquo;write.message&rsquo;-NRM/DEL/A/CSL/UNI-IFL&nbsp;&nbsp;&nbsp;ma-ACT-CSL-NRM/DPX</span><br />
       <em>The two of them like writing to each other.</em></p>
   <p class="style11">&nbsp;</p>
-  <p class="style11"><strong><img src="images/5-2-1b.jpg" width="153" height="45" /><br />
+  <p class="style11"><strong><img src="/ithdocs/images/5-2-1b.jpg" width="153" height="45" /><br />
     H&euml;tiun-n&nbsp; ivogwa&#345;&#316;okkai&nbsp;  &#355;ei.</strong> <br />
     <span class="style40"><span class="style14"><span class="style14">PRL-</span></span><span class="style41">ITV</span><span class="style14">-FAC<strong>&nbsp;&nbsp;&nbsp; </strong>DYN-[inc.stem:  &lsquo;recreation.leisure&rsquo;]-&lsquo;ambulate&rsquo;-NRM-DEL/M/CSL/CPN-TPP<sub>1</sub>/7-ISR&nbsp;&nbsp; 1+ma-ACT</span><br />
     </span><em>She and I are planning on taking a walk later on.</em></p>
   <p class="style11">&nbsp;</p>
-  <p class="style11"><strong><img src="images/6-1-31c.jpg" width="98" height="39" /><br />
+  <p class="style11"><strong><img src="/ithdocs/images/6-1-31c.jpg" width="98" height="39" /><br />
     On-n<strong>&nbsp; </strong>amnadya&nbsp; osmuil.</strong><br />
     <span class="style25"><span class="style6"><strong>EPC</strong></span>-FAC  &nbsp;&nbsp;&nbsp;STA-&lsquo;awe&rsquo;-RPV/PRX/A/CSL/UNI-IFL &nbsp;&nbsp;&nbsp;IFL-&lsquo;valley&rsquo;-DER-NRM/DEL/M/CSL/UNI</span><br />
     <em>The valley is expected to be awe-inspiring.</em></p>
   <p class="style11">&nbsp;</p>
-  <p class="style11"><strong><strong><img src="images/6-1-31d.jpg" width="123" height="43" /></strong><br />
+  <p class="style11"><strong><strong><img src="/ithdocs/images/6-1-31d.jpg" width="123" height="43" /></strong><br />
     Ur-rwu<strong>&nbsp; </strong>ivadya&nbsp; &acirc;byeil.</strong><br />
     <span class="style25"><span class="style6"><strong>DES</strong></span>-FAC/RSM-RTR  &nbsp;&nbsp;&nbsp;DYN-&lsquo;play&rsquo;-RPV/PRX/A/CSL/UNI-IFL &nbsp;&nbsp;&nbsp;STA-&lsquo;dog&rsquo;-ACT-NRM/DEL/M/CSL/UNI-</span><span class="style25">IFL</span><br />
     <em>The dog wanted to  play some more.</em></p>
@@ -2131,13 +2131,13 @@ NOTE: As an alternative to using <strong>Ve</strong>, Level can also be conveyed
 <p align="justify" class="style11">(Note that in the morphological interlinear analysis below, the distinction between absolute versus relative Level is indicated by a small <strong>&#8220;a&#8221;</strong> versus a small <strong>&#8220;r&#8221;</strong> attached to the label/abbreviation for the particular Level.) </p>
 <blockquote>
   <p><span class="style11"><strong><br />
-      <img src="images/6-2-6a.jpg" width="217" height="44" /><br />
-    Ulan-n&nbsp; oxass&ucirc;g &nbsp;&ecirc;qil   &nbsp;&ocirc;qo&igrave;l.</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style14"><a href="/sound_files/6-2-6a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="/sound_files/6-2-6a.mp3" target="_blank"><img src="images/Audio_icon.gif" alt="" width="19" height="16" border="0" align="absmiddle" /></a><br />
+      <img src="/ithdocs/images/6-2-6a.jpg" width="217" height="44" /><br />
+    Ulan-n&nbsp; oxass&ucirc;g &nbsp;&ecirc;qil   &nbsp;&ocirc;qo&igrave;l.</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style14"><a href="/sound_files/6-2-6a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="/sound_files/6-2-6a.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" alt="" width="19" height="16" border="0" align="absmiddle" /></a><br />
       <span class="style25"><span class="style6"><strong>SURr</strong></span>-ASR/CTX/IPU-FAC &nbsp;&nbsp;&nbsp;STA-&lsquo;have.eyesight&rsquo;-NRM/PRX/M/CSL/DPX-FLS1/6-IFL&nbsp;&nbsp;&nbsp; STA-&lsquo;woman&rsquo;-AFF-NRM/DEL/M/CSL/UNI-IFL&nbsp;&nbsp;&nbsp; STA-&lsquo;man&rsquo;-<span class="style6"><strong>CMP3A</strong></span>-NRM/DEL/M/CSL/UNI</span><span class="style25">-IFL</span><br />
     <em>It is clear the woman&rsquo;s eyesight has   improved, but she still doesn&rsquo;t see as   well<em> as  the man</em>, who   doesn't see very well either.</em></span></p>
   <p class="style11">&nbsp;</p>
-  <p class="style11"><strong><img src="images/6-2-6b.jpg" width="164" height="44" /><br />
-    Rril&nbsp; eglalaim&#316;&nbsp;&nbsp;byoail.</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style14"><a href="/sound_files/6-2-6b.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="/sound_files/6-2-6b.mp3" target="_blank"><img src="images/Audio_icon.gif" alt="" width="19" height="16" border="0" align="absmiddle" /></a><br />
+  <p class="style11"><strong><img src="/ithdocs/images/6-2-6b.jpg" width="164" height="44" /><br />
+    Rril&nbsp; eglalaim&#316;&nbsp;&nbsp;byoail.</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style14"><a href="/sound_files/6-2-6b.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="/sound_files/6-2-6b.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" alt="" width="19" height="16" border="0" align="absmiddle" /></a><br />
     <span class="style25">STA-&lsquo;cat&rsquo;-AFF-NRMDEL/M/CSL/UNI-IFL&nbsp;&nbsp;&nbsp;STA-&lsquo;sickness/illness&rsquo;-NRM/DEL/M/CSL/UNI<strong>-<span class="style6">SPQa</span></strong>-IFL&nbsp;&nbsp;&nbsp; STA-&lsquo;dog&rsquo;-<span class="style6"><strong>CMP2C</strong></span>-NRM/DEL/M/CSL/UNI</span>-<span class="style25">IFL</span><br />
     <em>The cat is now at   least as sick as the dog, if not more so, whereas previously only the dog was   sick.</em></p>
   <p>&nbsp;</p>
@@ -3416,17 +3416,17 @@ scheme, in which any formative stem can be incorporated directly into another fo
   6.4.2 Examples of  Incorporation and Format</h3>
 <blockquote>
   <p class="style11"><strong><br />
-      <img src="images/5-2-1b.jpg" width="153" height="45" /><br />
+      <img src="/ithdocs/images/5-2-1b.jpg" width="153" height="45" /><br />
     H&euml;tiun-n&nbsp; ivogwa&#345;&#316;okkai&nbsp;  &#355;ei.</strong> <br />
     <span class="style40"><span class="style14">PRL-</span><span class="style14">ITV</span><span class="style14">-FAC<strong>&nbsp;&nbsp;&nbsp; </strong>DYN-<span class="style6"><strong>[inc.stem:  &lsquo;recreation.leisure&rsquo;]-IFL</strong></span>-&lsquo;ambulate&rsquo;-NRM-DEL/M/CSL/CPN-TPP<sub>1</sub>/7-IFL-<span class="style6"><strong>ISR</strong></span>&nbsp;&nbsp; 1+ma-ACT</span><br />
   </span><em>She and I are planning on taking a walk later on.</em></p>
   <p class="style11">&nbsp;</p>
-  <p class="style11"><img src="images/2-1-1e.jpg" width="117" height="45" /><br />
+  <p class="style11"><img src="/ithdocs/images/2-1-1e.jpg" width="117" height="45" /><br />
     <strong>hremsoqai&#355;surkoi</strong><span class="style40"><span class="style14"><br />
   PPT-</span><span class="style14">STA</span><span class="style14">-<span class="style6"><strong>[inc.stem:  &lsquo;value&rsquo;]-IFL</strong></span>-&lsquo;human.being&rsquo;-INS-NRM-DEL/A/VAR/CST-MET<sub>1</sub>/9-IFL-AMG/<span class="style6"><strong>ATH</strong></span>&nbsp;&nbsp;</span></span><em><br />
   &lsquo;purportedly by means of the value derived  from all the varied attributes of humanity&rsquo;</em></p>
   <p class="style11">&nbsp;</p>
-  <p><span class="style11"><strong><img src="images/6-4-2a.jpg" width="142" height="44" /><br />
+  <p><span class="style11"><strong><img src="/ithdocs/images/6-4-2a.jpg" width="142" height="44" /><br />
     Xha<strong>&nbsp; </strong> &uuml;v&ocirc;qals&acirc;ni&uacute;</strong></span>.<br />
     <span class="style25">ua-OBL<strong><strong>&nbsp; </strong></strong> <strong><strong>&nbsp; </strong></strong>MNF-<span class="style6"><strong>[inc.stem:  &lsquo;sport&rsquo;]-FML</strong></span>-&lsquo;official&rsquo;-NRM/PRX/M/CSL/DCT-AGC<sub>2</sub>/5-FML-FNC/<span class="style6"><strong>AFI</strong></span>&nbsp;&nbsp;</span><em><br />
     <span class="style11">They are a group of sports officiators.</span></em></p>
