--- a/9/index.html
+++ b/9/index.html
@@ -820,19 +820,19 @@ through various English illustrations.</p>
   that such vocal inflections accomplish in English. In Ithkuil, the element with focus is placed immediately before the verb.  As for the topic of the sentence, this is shown by placing it as the first element in a sentence. If there is no overt topic or focus, the verb will appear as the first word in the sentence. Examples: </p>
 <blockquote class="style27">
   <p align="left"><strong><br />
-    <img src="images/9-1a.jpg" width="165" height="37" /><br />
+    <img src="/ithdocs/images/9-1a.jpg" width="165" height="37" /><br />
     Euspoigrata&igrave;&nbsp;   ek&scaron;&uacute;l&nbsp; b&#345;at&#316;.</strong><br />
     <font face="Arial, Helvetica, sans-serif"><span class="style29">DYN-[inc.stem: &lsquo;buy&rsquo;]-<font face="Arial, Helvetica, sans-serif">consume/ingest&rsquo;-NRM/</font>DEL/U/CSL/UNI-<font face="Arial, Helvetica, sans-serif">IFL-PRT</font> &nbsp; &nbsp;STA-&lsquo;clown&rsquo;-IND<font face="Arial, Helvetica, sans-serif">-NRM/DEL/M/CSL/UNI-FML &nbsp;&nbsp;<br />
     STA-</font>&lsquo;clam&rsquo;-OBL-NRM/DEL/M/CSL/DCT-IFL</span></font><br />
-    <em>The clown bought some clams and consumed them.</em> (No topic or focus)  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style29"><a href="sound_files/9-1a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/9-1a.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+    <em>The clown bought some clams and consumed them.</em> (No topic or focus)  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style29"><a href="sound_files/9-1a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/9-1a.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
   <p align="justify">&nbsp;</p>
-  <p align="justify"><strong><img src="images/9-1b.jpg" width="168" height="37" /><br />
+  <p align="justify"><strong><img src="/ithdocs/images/9-1b.jpg" width="168" height="37" /><br />
     Ek&scaron;&uacute;l  &nbsp;euspoigrata&igrave;&nbsp; b&#345;at&#316;.</strong><br />
     <font face="Arial, Helvetica, sans-serif"><span class="style29">STA-&lsquo;clown&rsquo;-IND<font face="Arial, Helvetica, sans-serif">-NRM/DEL/M/CSL/UNI-FML &nbsp;&nbsp;</font> &nbsp;DYN-[inc.stem: &lsquo;buy&rsquo;]-<font face="Arial, Helvetica, sans-serif">consume/ingest&rsquo;-NRM/</font>DEL/U/CSL/UNI-<font face="Arial, Helvetica, sans-serif">IFL-PRT</font> &nbsp;<font face="Arial, Helvetica, sans-serif"><br />
 STA-</font>&lsquo;clam&rsquo;-OBL-NRM/DEL/M/CSL/DCT-IFL</span></font><span class="style29"><br />
     </span><em>It was the clown who bought some clams and consumed them. </em>(The clown is the focus) </p>
   <p align="left">&nbsp;</p>
-  <p align="left"><strong><img src="images/9-1c.jpg" width="165" height="37" /><br />
+  <p align="left"><strong><img src="/ithdocs/images/9-1c.jpg" width="165" height="37" /><br />
     B&#345;at&#316;  &nbsp;ek&scaron;&uacute;l  &nbsp;euspoigrata&igrave;.</strong><br />
     <font face="Arial, Helvetica, sans-serif"><span class="style29"><font face="Arial, Helvetica, sans-serif"> STA-</font>&lsquo;clam&rsquo;-OBL-NRM/DEL/M/CSL/DCT-IFL <font face="Arial, Helvetica, sans-serif">&nbsp;&nbsp;</font> &nbsp;STA-&lsquo;clown&rsquo;-IND<font face="Arial, Helvetica, sans-serif">-NRM/DEL/M/CSL/UNI-FML &nbsp;&nbsp;</font> &nbsp;<br />
     DYN-[inc.stem: &lsquo;buy&rsquo;]-<font face="Arial, Helvetica, sans-serif">consume/ingest&rsquo;-NRM/</font>DEL/U/CSL/UNI-<font face="Arial, Helvetica, sans-serif">IFL-PRT</font></span></font><span class="style29"><br />
@@ -893,7 +893,7 @@ STA-</font>&lsquo;clam&rsquo;-OBL-NRM/DEL/M/CSL/DCT-IFL</span></font><span class
   redistributed to adjuncts. </p>
 <p align="justify" class="style27">Example: </p>
 <blockquote class="style27">
-  <p align="justify"><strong><img src="images/5-10-33c.jpg" width="133" height="46" /><br />
+  <p align="justify"><strong><img src="/ithdocs/images/5-10-33c.jpg" width="133" height="46" /><br />
 Ar-ryigrawilei&#355;rar&nbsp;  eglul&ocirc;n. </strong><span class="style25">&rarr; </span><strong>&Ccedil;tar-rya&nbsp; <strong>ei<strong><strong>r</strong></strong>&#355;</strong> <strong>&nbsp;</strong>igralar&nbsp;  eglul&ocirc;n.</strong><br />
 <span class="style20"><span class="style29">MNO-PCL-DYN-&lsquo;eat.food&rsquo;-HOR/FAC-NRM/DEL/M/CSL/UNI-EXT<span class="style17">2</span>/6-NA1<span class="style17">1</span>/5-IFL&nbsp;&nbsp;  &nbsp;&nbsp;STA-&lsquo;illness&rsquo;-IND-NRM/DEL/M/CSL/UNI-AGC<span class="style17">2</span>/7-IFL</span><span class="style25"> &rarr; </span><br />
 <span class="style29">HOR/PPS/CTX-PCL</span> <span class="style29">&nbsp;&nbsp; EXT<span class="style17">2</span>/6&nbsp;&nbsp;   &nbsp;DYN-&lsquo;eat food&rsquo;-NRM/DEL/M/CSL/UNI-NA1<span class="style17">1</span>/5-IFL&nbsp;&nbsp;  &nbsp;&nbsp;STA-&lsquo;illness&rsquo;-IND-NRM/DEL/M/CSL/UNI-AGC<span class="style17">2</span>/7-IFL</span></span><em><br />
@@ -1025,10 +1025,10 @@ went to the window and looked out</em>).</p>
   Ithkuil translation for both of these sentences, eschewing the point of view 
   entirely and restating the sentence to read: </p>
 <blockquote class="style27">
-  <p align="justify"><img src="images/3-5-2c.jpg" width="141" height="47" /><br />
+  <p align="justify"><img src="/ithdocs/images/3-5-2c.jpg" width="141" height="47" /><br />
     <strong>&Ucirc;b &nbsp;eikkradwa &nbsp;smou&#8217;ol&acirc;xh.</strong><br />
     <span class="style30">EXN<sub>1</sub>/6 <strong> &nbsp;</strong><strong><strong>&nbsp;</strong>&nbsp;</strong> DYN-&lsquo;move.along.obliquely.vertical.path.between.two.points&rsquo;-RPV/PRX/N/CSL/UNI-IFL<strong> &nbsp;</strong><strong> </strong> <strong> <strong> &nbsp;</strong>&nbsp;</strong> STA-&lsquo;valley&rsquo;-NAV-NRM/DEL/M/CSL/UNI-SCO<sub>2</sub>/5</span>-<span class="style30">IFL</span><br />
-    <em>The path through the canyon is steep.</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style29"><a href="sound_files/3-5-2c.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/3-5-2c.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+    <em>The path through the canyon is steep.</em> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style29"><a href="sound_files/3-5-2c.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/3-5-2c.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
 </blockquote>
 <p align="justify" class="style27">&nbsp;</p>
 <h3 align="justify" class="style27">9.2.2 Masking of Semantic or Participatory Roles</h3>
@@ -1074,17 +1074,17 @@ went to the window and looked out</em>).</p>
 </p>
 <blockquote class="style27">
   <p>&nbsp;</p>
-  <p><strong><img src="images/9-2-2a.jpg" width="186" height="44" /><br />
+  <p><strong><img src="/ithdocs/images/9-2-2a.jpg" width="186" height="44" /><br />
     Qi &nbsp;alka&#355;eins&nbsp; e&aacute;drai&rsquo;seumi.</strong><br />
     <span class="style30">ma-AFF&nbsp;&nbsp;&nbsp;&nbsp; STA-&lsquo;height&rsquo;-NRM/DEL/N/CSL/UNI-PTT<sub>2</sub>/6-IFL&nbsp;&nbsp;&nbsp;&nbsp; MNF-FRAMED/FML-&lsquo;preside/govern&rsquo;-COR-NRM/PRX/M/CSL/UNI-ROL<sub>2</sub>/4-FNC</span><br />
     <em>He&rsquo;s a tall president.</em><br />
-  [literally: <em>There is much height to him who formally presides</em>.] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style29"><a href="sound_files/9-2-2a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/9-2-2a.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+  [literally: <em>There is much height to him who formally presides</em>.] &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style29"><a href="sound_files/9-2-2a.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/9-2-2a.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
   <p>&nbsp;</p>
-  <p><strong><img src="images/9-2-2b.jpg" width="138" height="36" /><br />
+  <p><strong><img src="/ithdocs/images/9-2-2b.jpg" width="138" height="36" /><br />
     Qa  &nbsp;   &nbsp;eadramt&ocirc;&ccedil;qeum&iacute;.</strong><br />
     <span class="style30">ma-OBL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MNF-&lsquo;preside/govern&rsquo;-NRM/ICP/M/CSL/UNI-PRB<sub>2</sub>/7-ROL<sub>2</sub>/4-FNC-</span><span class="style30">FML</span><br />
     <em>He&rsquo;s a likely president.</em><br />
-  [literally: <em>He is one who probably will begin to formally preside</em>.]  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style29"><a href="sound_files/9-2-2b.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/9-2-2b.mp3" target="_blank"><img src="images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
+  [literally: <em>He is one who probably will begin to formally preside</em>.]  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style29"><a href="sound_files/9-2-2b.mp3" target="_blank">LISTEN</a></span>&nbsp;<a href="sound_files/9-2-2b.mp3" target="_blank"><img src="/ithdocs/images/Audio_icon.gif" width="19" height="16" border="0" align="absmiddle" /></a></p>
   <p>&nbsp; </p>
 </blockquote>
 <h3 class="style27">9.2.3 Negation</h3>
@@ -1116,13 +1116,13 @@ went to the window and looked out</em>).</p>
   is illustrated in the two sentences below:</p>
 <blockquote class="style27">
   <p><br />
-    <img src="images/9-2-3a.jpg" width="129" height="43" /><br />
+    <img src="/ithdocs/images/9-2-3a.jpg" width="129" height="43" /><br />
     <strong>Ilma&#355;&aacute;r<span class="style30"> &nbsp;</span>&ecirc;qeil.</strong><br />
     <span class="style30">DYN-&#8216;sing&#8217;-NRM/DEL/N/CSL/UNI-<span class="style49">NA1<sub>1</sub>/5</span>-</span><span class="style30">FML&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;STA-&#8216;girl&#8217;-ACT-NRM/DEL/M/CSL/UNI-IFL</span><br />
     <em>The woman doesn&#8217;t sing </em>[even though she can, i.e., she chooses 
     not to].</p>
   <p>&nbsp;</p>
-  <p><strong><img src="images/9-2-3b.jpg" width="129" height="42" /><br />
+  <p><strong><img src="/ithdocs/images/9-2-3b.jpg" width="129" height="42" /><br />
     Ilm&agrave;&#355;&icirc;r<span class="style30"> &nbsp;</span>&ecirc;qeil.</strong><br />
     <span class="style30">DYN-&#8216;sing&#8217;-NRM/DEL/N/CSL/UNI-<span class="style49">NA1<sub>1<sub><sub></sub></sub></sub>/4</span>-</span><span class="style30">FML&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;STA-&#8216;girl&#8217;-ACT-NRM/DEL/M/CSL/UNI-IFL</span><br />
     <em>The woman doesn&#8217;t sing</em> [because she can&#8217;t, i.e., she is 
