--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ As an example of the morphological richness and efficiency possible in
 this  language, examine the following Ithkuil sentence, comparing it to 
 its literal  English translation:</p>
 <blockquote>
-  <p class="style7"><strong><img src="images/intro-1.jpg" width="136" height="50"><br>
+  <p class="style7"><strong><img src="/ithdocs/images/intro-1.jpg" width="136" height="50"><br>
   Tram-mļöi&nbsp;&nbsp;hhâsmařpţuktôx.</strong></p>
   <p><span class="style7">TRANSLATION: <br>
     ‘<em>On the contrary, I think it may turn out that this    rugged mountain range trails off at some point</em>.’</span>
@@ -1335,7 +1335,7 @@ word-roots and the cognitive   processes behind the selection criteria. </li>
   </ul>
 </div>
 <p align="justify" class="style7">The interrelationships between these components can be   illustrated by the following diagram.</p>
-<p align="center" class="style7"><img height="198" src="images/Intro_1.gif" width="479" align="top"></p>
+<p align="center" class="style7"><img height="198" src="/ithdocs/images/Intro_1.gif" width="479" align="top"></p>
 <p align="center" class="style7">&nbsp;</p>
 <p align="justify" class="style7">Each example comprises an Ithkuil 
 word, phrase, or sentence written   in native Ithkuil script, 
